<resources>
    <string name="app_name">Quiz Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Q1">Q1) A station in a network forwards incoming packets by placing them on its shortest output queue. What routing algorithm is being used? \nAnswer: hot potato routing </string>
    <string name="Q2">Q2) The probability that a single bit will be in error on a typical public telephone line using 4800 bps modem is 10 to the power -3. If no error detection mechanism is used, the residual error rate for a communication line using 9-bit frames is approximately equal to \nAnswer: 0.009 </string>
    <string name="Q3">Q3) Frames from one LAN can be transmitted to anoth... \nAnswer: Bridge</string>
    <string name="Q4">Q4) You have a class A network address 10.0.0.0 with 40 subnets, but are required to add 60 new subnets very soon. You would like to still allow for the largest possible number of host IDs per subnet. Which subnet mask should you assign?\nAnswer:255.254.0.0</string>
    <string name="Q5">Q5) What are the most commonly used transmission speeds in BPS used in data communication?/nAnswer: 9600</string>
    <string name="Q6">Q6) What is the default subnet mask for a class C network?\nAnswer: 255.255.255.0 </string>
    <string name="Q7">Q7) Which of the following is used for modulation and demodulation?\nAnswer: modem</string>
    <string name="Q8">Q8) Which of the following is not a disadvantage of wireless LAN? \nAnswer: All of the above</string>
    <string name="Q9">Q9) Your company has a LAN in its downtown office and has now set up a LAN in the manufacturing plant in the suburbs. To enable everyone to share data and resources between the two LANs, what type of device(s) are needed to connect them? Choose the most correct answer.\nAnswer: "Router"</string>
    <string name="Q10">Q10) How many hosts are attached to each of the local area networks at your site?\nAnswer: 254 </string>
    <string name="Q11">Q1) Which instrument is used to measure altitudes in aircraft ? \nAnswe: Altimeter </string>
    <string name="Q12">Q2) Which instrument is used to measure depth of ocean ? \nAnswer: Fathometer</string>
    <string name="Q13">Q3) Name of the instrument to measure atomspheric pressure ? \nAnswer: Barometer</string>
    <string name="Q14">Q4) Which instrument is used to measure the power of electric circuit ? \nAnswer: Wattmeter</string>
    <string name="Q15">Q5) Which instrument is used in submarine to see the objects above sea level ? \nAnswer: Periscope</string>
    <string name="Q16">Q6) Which instrument is used in submarine to see the objects above sea level ? \nAnswer: Periscope</string>
    <string name="Q17">Q7) Which instrument is used to measure curvature of spherical objects ? \Answer: Spherometer</string>
    <string name="Q18">Q8) Which instrument is used to record physical happenings at a distant place ? \nAnswer: Telemeter</string>
    <string name="Q19">Q9) Which instrument is used to measure the scattering of light by particles suspended in a liquid ? \nAnswer: Nephetometer</string>
    <string name="Q20">Q10) Which instrument is used to determine the intensity of colours ? \nAnswer: Colorimeter </string>
    <string name="Q21">Q11) Which instrument is used to measure changes in volume of substances ? \nAnswer: Dilatometer </string>
    <string name="Q22">Q1) He did not give up fight even though he was badly bruised. \nAnswer: The fight was not given up by him even though he was badly bruised.</string>
    <string name="Q23">Q2) Which poem ends "I shall but love thee better after death"? \nAnswer: How do I love thee </string>
    <string name="Q24">Q3) Which kind of poem is Edward Lear associated with? \nAnswer: Nonsense </string>
    <string name="Q25">Q4) In 1960 "The Colossus" was the first book of poems published by which poetess? \nAnswer: Sylvia Plath</string>
    <string name="Q26">Q5) Which is an example of a proverb? \nAnswer: You cannot have your cake and eat it, too</string>
    <string name="Q27">Q6) in which language the stories of canterbury tale are written? \nAnswer: Middle english</string>
    <string name="Q28">Q7) How many languages did chaucer know?\nAnswer: 4</string>
    <string name="Q29">Q8) Who was the first English Christian king?\n Answer: Ethelbert </string>
    <string name="Q30">Q9) Which century is known as Dawn of Renaissance:\nAnswer: 14 th and 16 th</string>
    <string name="Q31">Q10) Who born in 1422:\nAnswer: William Caxton</string>
    <string name="Q32">Q1) মিথিলা ও বাংলার মিশ্রণে যে ভাষা সৃষ্টি—\nAnswer: ব্রজবুলি</string>
    <string name="Q33">Q2) ‘নসীরানামা’ কাব্যগ্রন্থর রচয়িতা কে? \nAnswer: মরদন </string>
    <string name="Q34">Q3) ‘টালা অভিনয়’—কি ধরনের গ্রন্থ? \nAnswer; নাটক</string>
    <string name="Q35">Q4) ‘মানব মুকুট’ গ্রন্থটির রচয়িতা কে? \nAnswer: এয়াকুব আলী চৌধুরী</string>
    <string name="Q36">Q5) বাংলা লিপির উৎস কী? \nAnswer: ব্রাহ্মী লিপি</string>
    <string name="Q37">Q6) ‘প্রাকৃত’ শব্দটির অর্থ কী? \nAnswer: স্বাভাবিক</string>
    <string name="Q38">Q7) শরৎচন্দ্র চট্টোপাধ্যায়ের শ্রেষ্ঠ রচনা কোনটি? \nAnswer: শ্রীকান্ত</string>
    <string name="Q39">Q8) প্রথম সার্থক নাটক কোনটি? \nAnswer: শর্মিষ্ঠা</string>
    <string name="Q40">Q9) কোনটি দীনবন্ধুর মিত্রের রচনা?  \nAnswer: কমলে কামিনী</string>
    <string name="Q41">Q10) ‘ভাষাবোধ বাঙ্গালা ব্যাকরণ’ কার লেখা? \nAnswer: নকুলেশ্বর বিদ্যাভূষণ </string>

</resources>
