<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent"
        tools:context=".Bangla">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/Q1"
            android:layout_below="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q32"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/Q2"
            android:layout_marginTop="10dp"
            android:layout_below="@id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q33"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q2"
            android:id="@+id/Q3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q34"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/Q4"
            android:layout_below="@id/Q3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q35"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q4"
            android:layout_marginTop="10dp"
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q36"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q5"
            android:id="@+id/Q6"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q37"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q6"
            android:id="@+id/Q7"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q38"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q7"
            android:id="@+id/Q8"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q39"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q8"
            android:id="@+id/Q9"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q40"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@id/Q9"
            android:id="@+id/Q10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q41"
            android:background="#673AB7"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/Solutionhomebutton"
            android:layout_below="@+id/Q10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="Show Solution Home"
            android:textColor="#FFFFFF"
            android:background="#630404"/>

    </RelativeLayout>
</ScrollView>