<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        tools:context=".GenaralKnowledge">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:background="#673AB7"
            android:text="@string/Q1"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Q1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#673AB7"
            android:text="@string/Q2"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Q2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#673AB7"
            android:text="@string/Q3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Q3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#673AB7"
            android:text="@string/Q4"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Q4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#673AB7"
            android:text="@string/Q5"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Solutionhomebutton"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="Show Solution Home"
            android:textColor="#FFFFFF"
            android:background="#630404"/>

    </RelativeLayout>
</ScrollView>